--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -27,6 +27,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        scrollbar-width: none; 
+        &::-webkit-scrollbar{
+            display: none;
+        }
 
         @include mobile{
             flex-direction: column;
@@ -43,6 +47,10 @@
             justify-content: space-around;
             padding: 20px;
             transition: all 1s ease;
+            scrollbar-width: none; 
+            &::-webkit-scrollbar{
+            display: none;
+        }
 
             @include mobile{
                 height: 100px;
